[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "lpc55s6x"
publish = false # this is a prototype
version = "0.0.0-alpha.0"

[dependencies]
bare-metal = "0.2.4"
r0 = "0.2.2"

cortex-m-rtic = {version="0.5.5", features=["homogeneous"]}

[dev-dependencies]
# inline-asm is a workaround for rust-embedded/cortex-m-rt#156
cortex-m = { version = "0.6.0", features = ["inline-asm"] }
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "z"
